--- a/style.css
+++ b/style.css
@@ -74,3 +74,15 @@ ul li {
 .img-row img:hover {
     transform: scale(1.05);
 }
+
+footer a {
+    color: #ffffff;
+    font-weight: bold;
+    text-decoration: underline;
+    transition: 0.2s;
+}
+
+footer a:hover {
+    opacity: 0.8;
+}
+
