--- a/style.css
+++ b/style.css
@@ -75,14 +75,22 @@ ul li {
     transform: scale(1.05);
 }
 
-footer a {
-    color: #ffffff;
-    font-weight: bold;
-    text-decoration: underline;
-    transition: 0.2s;
+/* FOOTER */
+footer {
+    margin-top: 50px;
+    background: linear-gradient(135deg, #0070c9, #4a90e2);
+    padding: 20px;
+    border-radius: 20px;
+    text-align: center;
+    color: white;
+    font-size: 18px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
 }
 
-footer a:hover {
-    opacity: 0.8;
+footer p {
+    margin: 0;
+    letter-spacing: 0.5px;
+    font-weight: bold;
 }
+
 
